--- a/index.html
+++ b/index.html
@@ -60,9 +60,12 @@
     let coloresTexto = ["#ff8080", "#ff4da6", "#ff00ff"];
 
     let partesABorrar = [
-      { texto: "Se te quiere", borrado: false, esperando: false, inicioEspera: 0, borrando: false, desde: -1 },
-      { texto: "Se te extraña", borrado: false, esperando: false, inicioEspera: 0, borrando: false, desde: -1 }
+      { texto: "Se te quiere", borrado: false },
+      { texto: "Se te extraña", borrado: false }
     ];
+    let borrandoParte = null;
+    let inicioEsperaBorrado = 0;
+    let esperandoBorrado = false;
 
     let particulas = [];
 
@@ -79,37 +82,24 @@
 
     function mousePressed() {
       if (!musicaIniciada) {
-        let audio = document.getElementById("bgMusic");
-        audio.play();
+        document.getElementById("bgMusic").play();
         musicaIniciada = true;
       }
-
       if (!mostrarDedicatoria) {
         clickCount++;
         if (clickCount % 2 === 0) {
           fraseIndex = (fraseIndex + 1) % frases.length;
-          for (let g of gotas) {
-            g.texto = frases[fraseIndex];
-          }
+          for (let g of gotas) g.texto = frases[fraseIndex];
         }
         if (clickCount >= 30) {
           mostrarDedicatoria = true;
           document.getElementById("scrollContainer").style.pointerEvents = "auto";
           crearParticulas();
         }
-
         for (let i = 0; i < 20; i++) {
           let ang = random(TWO_PI);
           let speed = random(2, 6);
-          gotas.push({
-            x: mouseX,
-            y: mouseY,
-            dx: cos(ang) * speed,
-            dy: sin(ang) * speed,
-            texto: frases[fraseIndex],
-            alpha: 255,
-            explosion: true
-          });
+          gotas.push({ x: mouseX, y: mouseY, dx: cos(ang)*speed, dy: sin(ang)*speed, texto: frases[fraseIndex], alpha: 255, explosion: true });
         }
       }
     }
@@ -117,10 +107,8 @@
     function crearParticulas() {
       for (let i = 0; i < 100; i++) {
         particulas.push({
-          x: random(width),
-          y: random(height),
-          dx: random(-0.3, 0.3),
-          dy: random(-0.3, 0.3),
+          x: random(width), y: random(height),
+          dx: random(-0.3, 0.3), dy: random(-0.3, 0.3),
           size: random(2, 4),
           alpha: random(150, 255),
           color: random(coloresTexto)
@@ -142,7 +130,6 @@
 
     function draw() {
       background(0, 100);
-
       if (mostrarDedicatoria) moverYdibujarParticulas();
 
       fill(255);
@@ -159,22 +146,16 @@
           let speed = random(2, 4);
           gotas.push({ x, y, speed, alpha: 255, texto: frases[fraseIndex], explosion: false });
         }
-
         for (let i = gotas.length - 1; i >= 0; i--) {
           let g = gotas[i];
           let color = random(coloresTexto);
           fill(color + hex(g.alpha, 2));
           text(g.texto, g.x, g.y);
-
           if (g.explosion) {
-            g.x += g.dx;
-            g.y += g.dy;
-            g.alpha -= 5;
+            g.x += g.dx; g.y += g.dy; g.alpha -= 5;
           } else {
-            g.y += g.speed;
-            g.alpha -= 1.5;
+            g.y += g.speed; g.alpha -= 1.5;
           }
-
           if (g.alpha <= 0 || g.y > height + 50) gotas.splice(i, 1);
         }
       }
@@ -183,7 +164,6 @@
         if (!pausaActiva && millis() - tiempoEscritura > velocidadEscritura && indexLetra < textoBase.length) {
           let siguiente = textoBase.slice(indexLetra, indexLetra + 3);
           let actual = textoBase[indexLetra];
-
           if (siguiente === "...") {
             pausaActiva = true;
             pausaTipo = "...";
@@ -195,7 +175,6 @@
             pausaInicio = millis();
             return;
           }
-
           textoVisible += actual;
           indexLetra++;
           tiempoEscritura = millis();
@@ -209,29 +188,32 @@
           tiempoEscritura = millis();
         }
 
-        for (let parte of partesABorrar) {
-          if (!parte.borrado && !parte.esperando && !parte.borrando && textoVisible.includes(parte.texto)) {
-            parte.desde = textoVisible.lastIndexOf(parte.texto);
-            parte.esperando = true;
-            parte.inicioEspera = millis();
-          }
-
-          if (parte.esperando && millis() - parte.inicioEspera >= 1300) {
-            parte.esperando = false;
-            parte.borrando = true;
-          }
-
-          if (parte.borrando && millis() - tiempoEscritura > velocidadEscritura) {
-            textoVisible = textoVisible.slice(0, textoVisible.length - 1);
-            tiempoEscritura = millis();
-            if (textoVisible.length <= parte.desde) {
-              parte.borrando = false;
-              parte.borrado = true;
+        if (!borrandoParte) {
+          for (let parte of partesABorrar) {
+            if (!parte.borrado && textoVisible.includes(parte.texto)) {
+              esperandoBorrado = true;
+              borrandoParte = parte;
+              inicioEsperaBorrado = millis();
+              break;
             }
           }
         }
 
-        if (indexLetra >= textoBase.length && !pausaActiva && !mensajeTerminado) {
+        if (esperandoBorrado && millis() - inicioEsperaBorrado >= 1300) {
+          esperandoBorrado = false;
+          borrandoParte.inicioBorrado = textoVisible.lastIndexOf(borrandoParte.texto);
+        }
+
+        if (borrandoParte && !esperandoBorrado && millis() - tiempoEscritura > velocidadEscritura) {
+          textoVisible = textoVisible.slice(0, textoVisible.length - 1);
+          tiempoEscritura = millis();
+          if (textoVisible.length <= borrandoParte.inicioBorrado) {
+            borrandoParte.borrado = true;
+            borrandoParte = null;
+          }
+        }
+
+        if (indexLetra >= textoBase.length && !pausaActiva && !mensajeTerminado && !esperandoBorrado && !borrandoParte) {
           mensajeTerminado = true;
           setTimeout(() => {
             borrandoFinal = true;
