--- a/index.html
+++ b/index.html
@@ -47,7 +47,8 @@
     let mensajeFinalizado = false;
     let musicaIniciada = false;
 
-    let textoBase = "Hola Yareni ;) ... Que tal, espero que estés bien ... Hace unos meses que no nos vemos pero en fin, sé que no nos conocemos muy bien que digamos y solo hablamos un par de veces pero en ese poco tiempo me agradaste bastante de verdad ... Y bueno jajaja ... Espero te esté yendo bastante bien :) ... Se te quiere Se te extraña ... Jajaja ... Bueno la verdad sí se te extraña, ojalá poder reencontrarnos muy pronto ... Pero en fin, yo me despido y espero la pases bien en este día que es tan especial para ti :D, tu amigo Caleb ;)...";
+    let textoBase = "Hola Yareni ;) ... Que tal, espero que estés bien ... Hace unos meses que no nos vemos pero en fin, sé que no nos conocemos muy bien que digamos y solo hablamos un par de veces pero en ese poco tiempo me agradaste bastante de verdad ... Y bueno jajaja ... Espero te esté yendo bastante bien :) ... Se te quiere Se te extraña ... Jajaja ... Bueno la verdad sí se te extraña, ojalá poder reencontrarnos muy pronto ... Espero de corazón la pases muy bien en este maravilloso día que debe de ser muy especial para ti y tu familia ... Sin más que decir se despide tu amigo Caleb :D";
+    
     let textoVisible = "";
     let indexLetra = 0;
     let tiempoEscritura = 0;
@@ -57,11 +58,12 @@
     let esperando = false;
     let tiempoEspera = 0;
     let borrandoFinal = false;
+    let mensajeTerminado = false;
     let coloresTexto = ["#ff8080", "#ff4da6", "#ff00ff"];
 
     let partesABorrar = [
-      { texto: "Se te quiere ", borrado: false },
-      { texto: "Se te extraña ", borrado: false }
+      { texto: "Se te quiere", borrado: false, detectado: false, tiempoDetectado: 0 },
+      { texto: "Se te extraña", borrado: false, detectado: false, tiempoDetectado: 0 }
     ];
 
     let particulas = [];
@@ -79,7 +81,8 @@
 
     function mousePressed() {
       if (!musicaIniciada) {
-        document.getElementById("bgMusic").play();
+        let audio = document.getElementById("bgMusic");
+        audio.play();
         musicaIniciada = true;
       }
 
@@ -87,9 +90,10 @@
         clickCount++;
         if (clickCount % 2 === 0) {
           fraseIndex = (fraseIndex + 1) % frases.length;
-          for (let g of gotas) g.texto = frases[fraseIndex];
+          for (let g of gotas) {
+            g.texto = frases[fraseIndex];
+          }
         }
-
         if (clickCount >= 30) {
           mostrarDedicatoria = true;
           document.getElementById("scrollContainer").style.pointerEvents = "auto";
@@ -171,25 +175,25 @@
       }
 
       if (mostrarDedicatoria && !borrandoFinal) {
-        if (!borrando && millis() - tiempoEscritura > velocidadEscritura && indexLetra < textoBase.length) {
+        if (!borrando && !esperando && millis() - tiempoEscritura > velocidadEscritura && indexLetra < textoBase.length) {
           textoVisible += textoBase[indexLetra];
           indexLetra++;
           tiempoEscritura = millis();
         }
 
         for (let parte of partesABorrar) {
-          if (!parte.borrado && textoVisible.includes(parte.texto)) {
+          if (!parte.borrado && !parte.detectado && textoVisible.includes(parte.texto)) {
+            parte.detectado = true;
+            parte.tiempoDetectado = millis();
             borrarDesde = textoVisible.lastIndexOf(parte.texto);
-            esperando = true;
-            tiempoEspera = millis();
+          }
+
+          if (parte.detectado && !parte.borrado && millis() - parte.tiempoDetectado >= 500) {
+            esperando = false;
+            borrando = true;
             parte.borrado = true;
             break;
           }
-        }
-
-        if (esperando && millis() - tiempoEspera >= 1300) {
-          borrando = true;
-          esperando = false;
         }
 
         if (borrando && millis() - tiempoEscritura > velocidadEscritura) {
@@ -200,7 +204,7 @@
           }
         }
 
-        if (!borrando && indexLetra >= textoBase.length && !esperando && !mensajeFinalizado) {
+        if (!borrando && indexLetra >= textoBase.length && !mensajeFinalizado) {
           mensajeFinalizado = true;
           setTimeout(() => {
             borrandoFinal = true;
@@ -212,10 +216,7 @@
           textoVisible = textoVisible.substring(1);
           tiempoEscritura = millis();
         }
-      }
 
-      // Este bloque asegura que el texto siga animándose con colores siempre
-      if (mostrarDedicatoria) {
         let dedicatoriaHTML = "";
         for (let c of textoVisible) {
           let color = random(coloresTexto);
