--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@
 
     let partesABorrar = [
       { texto: " Se te quiere, ", borrado: false },
-      { texto: "Se te extraña , ", borrado: false }
+      { texto: "Se te extraña , ..", borrado: false }
     ];
 
     let particulas = [];
